fix: corregir tests ProductoService tras refactor